# swatplus-ai

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: gen_ts.py
src/swatplus_ai/: __init__.py  cli.py  config_cli.py
src/swatplus_ai/api/: __init__.py  adapters.py  models.py  server.py
src/swatplus_ai/diagnostics/: __init__.py  drift.py  engine.py  finding.py  registry.py  rule.py
src/swatplus_ai/diagnostics/checks/: __init__.py  chan.py  hru.py  setup.py  wb.py  wx.py
src/swatplus_ai/diagnostics/rules/: chan_routing_topology.yaml  hru_fk_consistency.yaml  setup_bsn_day_lag_max_as_float.yaml  setup_files_present.yaml  setup_mgt_date_order.yaml  setup_object_count_consistency.yaml  setup_pet_method_vs_climate.yaml  setup_sim_period_sanity.yaml  setup_warmup_ratio.yaml  wb_et_precip_ratio.yaml  (+1 more)
src/swatplus_ai/llm/: __init__.py  interface.py  oauth_flow.py  tokens.py
src/swatplus_ai/metrics/: __init__.py
src/swatplus_ai/modules/: __init__.py  setup_check.py
src/swatplus_ai/parser/: __init__.py  _base.py  models.py  topology.py  txtinout.py
src/swatplus_ai/prompts/: __init__.py  builder.py  formatter.py  grounding.py  module1_system.md
src/swatplus_ai/retrieval/: README.md  __init__.py  api.py  types.py
src/swatplus_ai/telemetry/: __init__.py  cli.py  config.py  events.py  logs.py  logs_cli.py  redact.py  sinks.py
tests/: test_smoke.py
tests/api/: test_adapters.py  test_gen_ts.py  test_server.py
tests/cli/: conftest.py  test_check_provider_selection.py  test_serve.py  test_version_gate.py
tests/config_cli/: test_config_cli.py
tests/diagnostics/: conftest.py  test_drift.py  test_engine.py  test_engine_builtin_setup.py  test_finding.py  test_registry.py  test_rule.py  test_rule_bsn_day_lag_max_as_float.py  test_rule_chan_routing_topology.py  test_rule_files_present.py  test_rule_hru_fk_consistency.py  test_rule_mgt_date_order.py  test_rule_object_count_consistency.py  test_rule_setup_pet_method_vs_climate.py  test_rule_sim_period_sanity.py  test_rule_warmup_ratio.py  test_rule_wb_et_precip_ratio.py  test_rule_wx_source_consistency.py
tests/fixtures/diagnostic_rules/: always_flag.yaml  multi_result.yaml  requires_missing.yaml  wrong_stage.yaml
tests/fixtures/txtinout_minimal/: aqu_catunit.ele  aquifer.aqu  aquifer.con  aquifer_aa.txt  basin_ls_aa.txt  basin_nb_aa.txt  basin_pw_aa.txt  basin_wb_aa.txt  cal_parms.cal  chandeg.con  channel-lte.cha  channel_sd_aa.txt  channel_sdmorph_aa.txt  chem_app.ops  cntable.lum  codes.bsn  codes.sft  cons_practice.lum  fertilizer.frt  file.cio  fire.ops  graze.ops  harv.ops  hru-data.hru  hru.con  hru_ls_aa.txt  hru_nb_aa.txt  hru_pw_aa.txt  hru_wb_aa.txt  hyd-sed-lte.cha  hydrology.hyd  hydrology.res  hydrology.wet  initial.aqu  initial.cha  initial.res  irr.ops  landuse.lum  ls_unit.def  ls_unit.ele  (+36 more)
tests/llm/: test_anthropic.py  test_interface.py  test_mock_backend.py  test_oauth_backends.py  test_oauth_flow.py  test_openai.py  test_telemetry.py  test_tokens.py
tests/metrics/: test_metrics.py
tests/modules/: conftest.py  test_render.py  test_setup_check.py
tests/parser/: conftest.py  test_aquifer_aa.py  test_basin_ls_aa.py  test_basin_nb_aa.py  test_basin_nb_aa_column_swap.py  test_basin_pw_aa.py  test_basin_wb_aa.py  test_basin_wb_aa_uru_validation.py  test_calibration.py  test_channel_sd_aa.py  test_channel_sdmorph_aa.py  test_codes_bsn.py  test_con_files.py  test_decision_tables.py  test_def_ele_rtu_files.py  test_expect_header_permissive.py  test_expect_header_variable_suffix.py  test_fertilizer_frt.py  test_file_cio.py  test_hru_data.py  test_hru_initial.py  test_hru_ls_aa.py  test_hru_nb_aa.py  test_hru_pw_aa.py  test_hru_wb_aa.py  test_hydrology_hyd.py  test_landuse_lum.py  test_lum_tables.py  test_management_sch.py  test_map_columns_by_name.py  test_nutrients_sol.py  test_object_cnt.py  test_ops_files.py  test_output_column_mapping_e2e.py  test_outputs_namespace.py  test_parameters_bsn.py  test_pesticide_pes.py  test_plant_ini.py  test_print_prt.py  test_reservoir_aa.py  (+12 more)
tests/prompts/: conftest.py  test_builder.py  test_formatter.py  test_grounding.py  test_grounding_e2e.py  test_template.py
tests/retrieval/: test_api.py  test_bm25_index.py  test_io_docs_fetcher.py  test_io_spec_chunker.py  test_types.py
tests/retrieval/fixtures/: io_docs_excerpt.txt
tests/telemetry/: conftest.py  test_cli.py  test_config.py  test_emit.py  test_events.py  test_instrumentation.py  test_logs.py  test_logs_cli.py  test_redact.py  test_sinks.py
ui/: .env.development  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
ui/src/components/: AskBar.tsx  ChartTooltip.tsx  CitePop.tsx  KpiCard.tsx  LanduseDonut.tsx  Layout.tsx  PageHeader.tsx  ProgressRing.tsx  Sidebar.tsx  Sparkline.tsx  ThemeProvider.tsx  ThemeToggle.tsx  TopBar.tsx  WorldMiniMap.tsx
ui/src/lib/: api.ts  client.ts  mockApi.ts  moriasi.tsx  schemas.ts  types.ts  utils.ts
ui/src/mock/: chat.json  findings.json  hydrograph.json  iterations.json  landuse.json  project.json
ui/src/routes/: Calibration.tsx  Chat.tsx  Dashboard.tsx  Evaluation.tsx  Home.tsx  SetupCheck.tsx
(+98 files in other folders)
