[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swatplus-ai"
version = "0.1.0a0"
description = "Open-source AI assistant for SWAT+ model setup, calibration, and evaluation."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Elzon Rippel" }]
keywords = ["swat", "swat-plus", "hydrology", "calibration", "ai", "llm", "rag"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Hydrology",
]
dependencies = [
  "pydantic>=2.6",
  "typer>=0.12",
  "rich>=13.7",
  "pyyaml>=6.0",
  "httpx>=0.27",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=16",
  "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-asyncio>=0.23",
  "hypothesis>=6.100",
  "ruff>=0.4",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "types-PyYAML",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
]
secrets = [
  "keyring>=24",
]
serve = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
]

[project.scripts]
swatplus-ai = "swatplus_ai.cli:app"

[project.urls]
Homepage = "https://github.com/ECRIPPEL/swatplus-ai"
Repository = "https://github.com/ECRIPPEL/swatplus-ai"
Issues = "https://github.com/ECRIPPEL/swatplus-ai/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/swatplus_ai"]

[tool.hatch.build.targets.wheel.force-include]
"src/swatplus_ai/diagnostics/rules" = "swatplus_ai/diagnostics/rules"
"src/swatplus_ai/prompts" = "swatplus_ai/prompts"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "F", "W",   # pycodestyle + pyflakes
  "I",              # isort
  "B",              # bugbear
  "UP",             # pyupgrade
  "SIM",            # simplify
  "RUF",            # ruff-specific
]
ignore = [
  "E501",   # line-length handled by formatter
  "RUF002", # allow Greek letters / math symbols in docstrings (NSE, KGE, σ, α, β, γ)
  "RUF003", # allow en-dash / multiplication sign in comments (math notation)
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["pandas", "pandas.*", "pyarrow", "pyarrow.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["keyring", "keyring.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["rank_bm25", "rank_bm25.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
